# Discreet-MVNO-Policy-Mapper-DMPM-

./: .gitignore  AI_QUICK_REFERENCE.md  CHANGELOG.md  Dockerfile  MANIFEST.in  MCP_QUICKSTART.md  MCP_VERIFICATION_CHECKLIST.md  Makefile  README.md  REMOTE_DEPLOYMENT.md  ai_integration_examples.py  configure_api.py  crawler_post_init.marker  crawler_post_json_dump.marker  crawler_post_run.marker  crawler_pre_init.marker  crawler_pre_json_dump.marker  create_deployment_bundle.sh  deployment_log.txt  docker-compose.yml  enhanced_keywords.py  error_log.txt  generate_intel_report.py  ghost-mcp.service  ghost_config.py  ghost_crawler.py  ghost_crypto.py  ghost_dashboard.py  ghost_db.py  ghost_mcp_nlp.py  ghost_mcp_server.py  ghost_mcp_server_v2.py  ghost_parser.py  ghost_reporter.py  ghost_reporter_pdf.py  ghost_scheduler.py  import_config_done.marker  imports_app_complete.marker  imports_base_complete.marker  keywords.txt  (+31 more)
command_4_intel_reports/reports/: mvno_intel_report_20250702-235758.txt
config/: ghost_config.json.example  pytest_ghost_config.json
data/: ghost_data.db
docker/: Dockerfile  docker-compose.yml
docs/: API_Reference.md  Deployment.md  Integration.md  Release_Checklist.md  Testing.md  Troubleshooting.md
reports/: intel_brief_20250703_031212.txt
requirements/: base.txt  dev.txt  optional.txt
scripts/: create_deployment_bundle.sh  health_check.py  test_mcp.sh  verify_installation.sh
src/ghost_dmpm/: __init__.py  app_logic.py  main.py
src/ghost_dmpm/api/: dashboard.py  mcp_client.py  mcp_server.py
src/ghost_dmpm/core/: config.py  crawler.py  database.py  parser.py  reporter.py  reporter_pdf.py
src/ghost_dmpm/enhancements/: analytics.py  export.py  scheduler.py  webhooks.py
templates/: dashboard.html
test_api_output_google_api/: raw_search_results_20250703_111248.json  raw_search_results_20250703_130434.json
test_output/: SUCCESS_MARKER.txt
test_output_main_integration/: SUCCESS_MARKER_MAIN_FULL_TEST.txt  keywords_for_main_test.txt  mvnos_for_main_test.txt
tests/: conftest.py
tests/integration/: test_advanced_features.py  test_deployment.py  test_google_api.py  test_import.py
tests/unit/: test_analytics.py  test_config.py  test_export.py  test_scheduler.py  test_webhooks.py
