[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-dmpm"
version = "1.0.0"
description = "Discreet MVNO Policy Mapper for intelligence gathering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"} # Or file = "LICENSE.md" if LICENSE.md exists
authors = [
    {name = "GHOST Team", email = "contact@example.com"},
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "Flask>=2.2.0",
    "Flask-HTTPAuth>=4.7.0",
    "python-dateutil>=2.8.0",
    "websockets>=10.0",
    "schedule>=1.1.0",
]

[project.optional-dependencies]
crypto = ["cryptography>=38.0.0"]
nlp = ["spacy>=3.4.0"]
dev = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "pytest-cov>=3.0.0",
    "flake8>=4.0.0",
]

# Dependencies can be listed here, but setup.py already has them.
# For a pyproject.toml-centric build, they would move here.
# For now, setuptools will use what's in setup.py.
# To be fully compliant and less reliant on setup.py for metadata, add:
# dependencies = [
#     "requests>=2.28.0",
#     "beautifulsoup4>=4.11.0",
#     "Flask>=2.2.0",
#     "Flask-HTTPAuth>=4.7.0",
#     "python-dateutil>=2.8.0",
#     "websockets>=10.0",
# ]

[project.urls]
"Homepage" = "https://github.com/your-repo/ghost-dmpm" # Placeholder
"Bug Tracker" = "https://github.com/your-repo/ghost-dmpm/issues" # Placeholder

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"] # Standard glob patterns for pytest
python_functions = ["test_*"]
addopts = "-v --cov=ghost_dmpm --cov-report=term-missing --cov-report=html:test_output/coverage_html"
log_cli = true
log_cli_level = "INFO"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/setup.py"] # Often has specific import orders
